[package]
name = "likemod"
version = "0.2.1-alpha.0"
authors = [ "Luca Bruno <lucab@debian.org>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/likemod-rs"
documentation = "https://docs.rs/likemod"
readme = "README.md"
description = "A pure-Rust library to work with Linux kernel modules"
keywords = ["Linux", "kernel", "module", "modprobe", "kmod"]
exclude = [
".gitignore",
".travis.yml",
]

[[example]]
name = "async-unload"
required-features = ["async"]

[dependencies]
# Private dependencies.
libc = "0.2"
# Public dependencies, exposed through library API.
errno = "0.2"
error-chain = {version = "0.12", default-features = false}
futures = {version = "0.1", optional = true}
tokio = {version = "0.1", optional = true}

[features]
async = ["futures", "tokio"]

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: likemod release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
tag-message = "likemod {{version}}"

[package.metadata.docs.rs]
features = ["async"]
